<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/lsq_color_white">

    <include
        android:id="@+id/lsq_navigation_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        layout="@layout/navigation_bar_view"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/lsq_dimen_30">

    <EditText
        android:id="@+id/lsq_input_password_text"
        android:layout_width="match_parent"
        android:layout_height="@dimen/lsq_dimen_50"
        android:hint="@string/lsq_input_password"
    />

    <EditText
        android:id="@+id/lsq_input_password_again_text"
        android:layout_width="match_parent"
        android:layout_height="@dimen/lsq_dimen_50"
        android:hint="@string/lsq_input_password_again"
        android:layout_marginTop="@dimen/lsq_dimen_30"
        />

    <Button
        android:id="@+id/lsq_submit_btn"
        style="@style/lsq_button_setting"
        android:layout_width="match_parent"
        android:text="@string/lsq_submit"
        android:layout_marginTop="@dimen/lsq_dimen_30"
        android:background="@color/lsq_color_purple"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/lsq_color_black"
            android:textSize="@dimen/lsq_dimen_15"
            android:text="@string/lsq_password_setting_hint"
            android:layout_marginTop="@dimen/lsq_dimen_30"
            />

    </LinearLayout>

</LinearLayout>