<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lsq_color_white">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lsq_input_password"
        android:textSize="@dimen/lsq_dimen_30"
        android:layout_marginTop="@dimen/lsq_dimen_50"
        android:visibility="gone"
        android:textColor="@color/lsq_color_black"/>


    <TextView
        android:id="@+id/lsq_show_password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/lsq_color_black"
        android:textSize="@dimen/lsq_dimen_15"
        android:visibility="gone"
        android:layout_marginTop="@dimen/lsq_dimen_15"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/lsq_num_list_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/lsq_dimen_50"
        android:visibility="gone"
        android:layout_gravity="center_horizontal"
        />

    <Button
        android:id="@+id/lsq_back_btn"
        style="@style/lsq_button_setting"
        android:textSize="@dimen/lsq_dimen_15"
        android:textColor="@color/lsq_color_white"
        android:text="@string/lsq_back_homepage"
        android:layout_marginTop="@dimen/lsq_dimen_30"
        android:background="@color/lsq_color_purple"
        android:layout_centerInParent="true"
        />

    <Button
        android:id="@+id/lsq_face_detect_again"
        style="@style/lsq_button_setting"
        android:textSize="@dimen/lsq_dimen_15"
        android:textColor="@color/lsq_color_white"
        android:text="@string/lsq_face_dect_restart"
        android:layout_marginTop="@dimen/lsq_dimen_30"
        android:layout_below="@+id/lsq_back_btn"
        android:layout_centerInParent="true"
        android:background="@color/lsq_color_purple"
        />

</RelativeLayout>