<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@mipmap/lsq_homepage_bg"
        android:scaleType="centerCrop"/>

    <ImageView
        android:id="@+id/lsq_setting_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:src="@mipmap/lsq_homepage_setting_icon"
         />

    <LinearLayout
        android:id="@+id/lsq_home_page_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/lsq_dimen_15">

        <RelativeLayout
            android:id="@+id/lsq_face_unlock_btn"
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:gravity="center_vertical"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="9dp"
            android:background="@mipmap/lsq_homepage_btn_normal">

            <ImageView
                android:id="@+id/lsq_homepage_shot"
                android:layout_width="31dp"
                android:layout_height="31dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="25dp"
                android:scaleType="centerInside"
                android:background="@mipmap/lsq_style_default_btn_sticker_unselected"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/lsq_homepage_shot"
                android:layout_marginLeft="16dp"
                android:text="@string/lsq_face_unlock"
                android:textSize="16sp"
                android:textColor="#553213"
                android:layout_centerVertical="true"
                />
            <ImageView
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:scaleType="centerInside"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="12dp"
                android:background="@mipmap/lsq_homepage_next_icon"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/lsq_add_face_info"
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:gravity="center_vertical"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="9dp"
            android:background="@mipmap/lsq_homepage_btn_normal"
            >

            <ImageView
                android:id="@+id/lsq_add_face_left"
                android:layout_width="31dp"
                android:layout_height="31dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="25dp"
                android:scaleType="centerInside"
                android:background="@mipmap/lsq_style_default_btn_beauty_selected"/>
            <TextView
                android:id="@+id/lsq_add_face_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/lsq_add_face_left"
                android:layout_marginLeft="16dp"
                android:text="@string/lsq_add_face_info"
                android:textSize="16sp"
                android:textColor="#553213"
                android:layout_centerVertical="true"
                />
            <ImageView
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:scaleType="centerInside"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="12dp"
                android:background="@mipmap/lsq_homepage_next_icon"
                />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/lsq_add_password"
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:gravity="center_vertical"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="9dp"
            android:visibility="gone"
            android:background="@mipmap/lsq_homepage_btn_normal">

            <ImageView
                android:id="@+id/lsq_password_left"
                android:layout_width="31dp"
                android:layout_height="31dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="25dp"
                android:scaleType="centerInside"
                android:background="@mipmap/lsq_homepage_import_icon"/>
            <TextView
                android:id="@+id/lsq_add_password_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/lsq_password_left"
                android:layout_marginLeft="16dp"
                android:text="@string/lsq_add_password"
                android:textSize="16sp"
                android:textColor="#553213"
                android:layout_centerVertical="true"
                />
            <ImageView
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:scaleType="centerInside"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="12dp"
                android:background="@mipmap/lsq_homepage_next_icon"/>
        </RelativeLayout>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lsq_login_success"
        android:textColor="#9600ff"
        android:textSize="@dimen/lsq_dimen_30"
        android:visibility="gone"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/lsq_home_page_btn"
        android:layout_marginBottom="@dimen/lsq_dimen_15"/>

</RelativeLayout>